<resources>
    <string name="app_name">UGRF</string>
    <string name="login">Login</string>
    <string name="id">ID</string>
    <string name="password">Password</string>
    <string name="phone">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="no_account">Don\'t have an account yet?</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="username">Username</string>
    <string name="Gender">Gender</string>
    <string name="email">E-mail</string>
    <string name="has_covid">COVID-19</string>
    <string name="positive">Positive</string>
    <string name="negative">Negative</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="Register">Register</string>
    <string name="title">Title</string>
    <string name="example">Example</string>
    <string name="medical_diagnosis">Medical Diagnosis</string>
    <string name="daily_checkup">Daily Check-Up</string>
    <string name="profile">Profile</string>
    <string name="who_articles">WHO Articles</string>
    <string name="request_bed">Request A Bed</string>
    <string name="treatment_plan">Treatment Plan</string>
    <string name="logout_dialog_title">Logout</string>
    <string name="logout_dialog_message">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="temperature">Temperature</string>
    <string name="nausea">Nausea</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="heart_beat">Heartbeat Rate</string>
    <string name="cough">Cough</string>
    <string name="throat_pain">Throat Pain</string>
    <string name="submit">Submit</string>
    <string name="market">Market</string>
    <string name="history">History</string>
    <string name="notifications">Notifications</string>
    <string name="add_item">Add New Item</string>
    <string name="show_items">Show Items</string>
    <string name="accessories">Accessories</string>
    <string name="collectables">Collectables</string>
    <string name="figurines">Figurines</string>
    <string name="homeware">Homeware</string>
    <string name="souvenirs">Souvenirs</string>
    <string name="stationary">Stationary</string>

    <string-array name="item_categories">
        <item>Accessories</item>
        <item>Collectables</item>
        <item>Figurines</item>
        <item>Homeware</item>
        <item>Souvenires</item>
        <item>Stationary</item>
    </string-array>
</resources>
