<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:padding="10dp"
    tools:context=".views.activities.RegisterActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_bg"
        android:backgroundTint="@android:color/white"
        android:layout_centerInParent="true"
        android:padding="20dp"
        android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/backButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/back"
            android:onClick="backToLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
            android:hint="@string/id"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/usernameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/username"
            android:drawablePadding="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/username"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/emailEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/email"
            android:drawablePadding="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/email"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/phoneEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/phone"
            android:drawablePadding="10dp"
            android:layout_marginTop="10dp"
            android:inputType="numberSigned"
            android:hint="@string/phone"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/passwordEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/password"
            android:drawablePadding="10dp"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:hint="@string/password"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/confirmPasswordEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/password"
            android:drawablePadding="10dp"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/Gender"
                android:drawableStart="@drawable/gender"
                android:drawablePadding="10dp"
                android:paddingStart="5dp"
                android:textSize="16dp"
                android:textStyle="bold"
                android:fontFamily="@font/caviardreams"/>

            <RadioGroup
                android:id="@+id/genderRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:paddingEnd="10dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/femaleRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:fontFamily="@font/caviardreams"/>

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/maleRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:fontFamily="@font/caviardreams"/>

            </RadioGroup>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Register"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:fontFamily="@font/caviardreams"
            android:background="@drawable/rounded_bg"
            android:backgroundTint="@color/colorPrimaryDark"
            android:layout_marginTop="30dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>