<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:padding="10dp"
    tools:context=".views.activities.LoginActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_bg"
        android:backgroundTint="@android:color/white"
        android:layout_centerInParent="true"
        android:padding="20dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/idEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/id"
            android:drawablePadding="10dp"
            android:inputType="number"
            android:text="021456123789"
            android:layout_marginTop="30dp"
            android:hint="@string/id"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/passwordEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/password"
            android:drawablePadding="10dp"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:hint="@string/password"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:onClick="goToDashboard"
            android:fontFamily="@font/caviardreams"
            android:background="@drawable/rounded_bg"
            android:backgroundTint="@color/colorPrimaryDark"
            android:layout_marginTop="30dp"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/no_account"
                android:fontFamily="@font/caviardreams"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/signUpText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/sign_up"
                android:onClick="goToRegister"
                android:fontFamily="@font/caviardreams"
                android:textStyle="bold"
                android:clickable="true"
                android:paddingStart="10dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>