<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.ResultActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/reportTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/caviardreams"
        android:paddingTop="10dp"
        android:text="Check-Up Result"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/backButton"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:layout_below="@id/reportTitleText">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/caviardreams"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/temperatureText"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                android:gravity="end"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/caviardreams"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/heart_beat"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/caviardreams"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/heartbeatText"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                android:gravity="end"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/caviardreams"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/blood_pressure"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/caviardreams"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/pressureText"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                android:gravity="end"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/caviardreams"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/cough"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/caviardreams"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/coughText"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                android:gravity="end"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/caviardreams"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/nausea"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/caviardreams"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/nauseaText"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                android:gravity="end"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/caviardreams"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/throat_pain"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/caviardreams"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/throatText"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                android:gravity="end"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/caviardreams"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="Smell Disorder"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/caviardreams"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/smellText"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                android:gravity="end"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/caviardreams"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="Taste Disorder"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/caviardreams"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tasteText"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                android:gravity="end"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/caviardreams"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Result: COVID-19 Negative"
            android:layout_gravity="center"
            android:textSize="@dimen/title_size"
            android:layout_marginTop="30dp"
            android:textStyle="italic"
            android:fontFamily="@font/caviardreams"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/doneButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Done"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:onClick="doneCheckup"
            android:fontFamily="@font/caviardreams"
            android:background="@drawable/rounded_bg"
            android:backgroundTint="@color/colorPrimaryDark"
            android:layout_marginTop="60dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>